<resources>
    <string name="app_name">Simple News App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="retry">Повторить попытку</string>
    <string name="retryMessage">Уууупс… что-то пошло не так</string>
    <string name="checkInternetConnection">Проверьте интернет соединение</string>
    <string name="unknownAuthor">Unknown author</string>
    <string name="bottom_navigation_news_main">Главная</string>
    <string name="bottom_navigation_news_line">Кэш</string>
    <string name="bottom_navigation_account">Я</string>
    <string name="image_description">Изображение</string>
    <string name="button_chang_themes">change theme on main</string>
    <string name="button_favorite">favorite news</string>
    <string name="alert_dialog_theme_title">choose topics</string>
    <string name="alert_dialog_positive_button">ok</string>
    <string name="alert_dialog_negative_button">cancel</string>
    <string name="text_input_edit_text">Search</string>
    <string name="news_line_no_result">No result =(</string>
    <string name="onboarding_button_next">Next</string>
    <string name="onboarding_button_start">Start</string>

    <string name="filter_setting_date_header">Date of publication</string>
    <string name="filter_setting_date_value_start">From:</string>
    <string name="filter_setting_date_value_end">To:</string>
    <string name="filter_setting_date_default">Any</string>
    <string name="filter_setting_language_header">Language of written news</string>
    <string name="filter_setting_language_value">Language:</string>
    <string name="filter_setting_sort_by_header">Sort by</string>
    <string name="filter_setting_button_find">find</string>

    <string name="fragment_read_title">Read</string>
    <string name="fragment_read_description">Read news on any and interesting topics for you</string>
    <string name="fragment_search_title">Search</string>
    <string name="fragment_search_description">Search news on specific topics</string>
    <string name="fragment_save_title">Save</string>
    <string name="fragment_save_description">Save news to read them when there is no network</string>

    <string name="fragment_news_detail_menu_favorite">favorite</string>

    <string-array name="all_theme_main_line">
        <item>Country</item>
        <item>Health</item>
        <item>Policy</item>
        <item>Finance</item>
    </string-array>

</resources>